Facebook login permissions

--- a/hs-mobile-chat-app/hs-mobile-chat-app/Base.lproj/Main.storyboard
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/Base.lproj/Main.storyboard
@@ -17,8 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zrr-sw-Q45">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OJd-R5-A7m" customClass="GIDSignInButton">
-                                <rect key="frame" x="20" y="20" width="240" height="53"/>
+                                <rect key="frame" x="20" y="20" width="240" height="60"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="loginGoogle:" destination="BYZ-38-t0r" eventType="valueChanged" id="nnw-xQ-WoO"/>
@@ -27,6 +31,10 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6sK-4p-BkJ" customClass="FBSDKLoginButton">
                                 <rect key="frame" x="20" y="106" width="240" height="53"/>
                                 <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="REi-r1-0sF">
+                                <rect key="frame" x="20" y="190" width="240" height="53"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -38,7 +46,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="455" y="371"/>
+            <point key="canvasLocation" x="322" y="258"/>
         </scene>
     </scenes>
 </document>
