--- a/hs-mobile-chat-app/hs-mobile-chat-app/Base.lproj/Main.storyboard
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginViewController" customModule="hs_mobile_chat_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginViewController" customModule="HootChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -19,12 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OJd-R5-A7m" customClass="GIDSignInButton">
-                                <rect key="frame" x="20" y="20" width="240" height="60"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Yp-eF-6GH">
-                                <rect key="frame" x="20" y="174" width="232" height="50"/>
+                                <rect key="frame" x="20" y="237" width="232" height="50"/>
                                 <state key="normal" image="fb"/>
                                 <connections>
                                     <action selector="btnFBLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wVH-pw-wU3"/>
@@ -37,11 +33,17 @@
                                     <action selector="btnTWRTLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mVB-Z5-fCc"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P1K-pH-pjP">
+                                <rect key="frame" x="20" y="172" width="232" height="50"/>
+                                <state key="normal" image="goo"/>
+                                <connections>
+                                    <action selector="btnGoogleLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lQV-T7-Pue"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="googleButton" destination="OJd-R5-A7m" id="b2A-uN-nbU"/>
                         <segue destination="Mai-9W-JAH" kind="presentation" identifier="SelectUsernameSegue" id="J0a-dw-HLy"/>
                     </connections>
                 </viewController>
@@ -52,7 +54,7 @@
         <!--Username View Controller-->
         <scene sceneID="LKK-Fo-tgg">
             <objects>
-                <viewController id="Mai-9W-JAH" customClass="UsernameViewController" customModule="hs_mobile_chat_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Mai-9W-JAH" customClass="UsernameViewController" customModule="HootChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="x2F-EV-za0"/>
                         <viewControllerLayoutGuide type="bottom" id="lCj-8Z-OqP"/>
@@ -109,6 +111,7 @@
     </scenes>
     <resources>
         <image name="fb" width="580" height="124"/>
+        <image name="goo" width="580" height="124"/>
         <image name="twtr" width="580" height="124"/>
     </resources>
 </document>
