--- a/hs-mobile-chat-app/hs-mobile-chat-app/Base.lproj/Main.storyboard
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/Base.lproj/Main.storyboard
@@ -114,8 +114,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iua-3n-W1Z">
-                                <rect key="frame" x="0.0" y="350" width="375" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iua-3n-W1Z">
+                                <rect key="frame" x="28" y="350" width="319" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="K9W-Z5-DSp"/>
+                                </constraints>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -167,11 +171,14 @@
                             <constraint firstItem="bE2-Ch-y9j" firstAttribute="leading" secondItem="zir-pQ-am4" secondAttribute="leadingMargin" id="fvH-Mf-cOc"/>
                             <constraint firstAttribute="trailing" secondItem="p9V-Xh-s7Q" secondAttribute="trailing" id="gHT-SK-86i"/>
                             <constraint firstItem="p9V-Xh-s7Q" firstAttribute="height" secondItem="zir-pQ-am4" secondAttribute="height" multiplier="0.2" id="pC2-xE-uBZ"/>
+                            <constraint firstItem="iua-3n-W1Z" firstAttribute="centerX" secondItem="zir-pQ-am4" secondAttribute="centerX" id="r64-T4-3bq"/>
                             <constraint firstAttribute="trailing" secondItem="iua-3n-W1Z" secondAttribute="trailing" id="vr1-Rq-T3v"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bE2-Ch-y9j" secondAttribute="trailing" id="wy2-b0-09P"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="71T-44-h2R"/>
+                                <exclude reference="vr1-Rq-T3v"/>
                                 <exclude reference="7de-Pl-rxq"/>
                                 <exclude reference="Rn3-70-y3U"/>
                                 <exclude reference="gHT-SK-86i"/>
