--- a/hs-mobile-chat-app/hs-mobile-chat-app/Chat.storyboard
+++ b/hs-mobile-chat-app/hs-mobile-chat-app/Chat.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Chat View Controller-->
@@ -224,7 +225,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MJV-LZ-Vdc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="802" y="-875"/>
+            <point key="canvasLocation" x="726" y="-875"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="gfP-UJ-O1B">
@@ -281,30 +282,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bbE-Ll-YOZ">
-                                <rect key="frame" x="180" y="155" width="242" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bbE-Ll-YOZ">
+                                <rect key="frame" x="180" y="155" width="400" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Friend Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZ2-ok-UKl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friend Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZ2-ok-UKl">
                                 <rect key="frame" x="20" y="159" width="132" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="irQ-i8-boF">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="irQ-i8-boF">
                                 <rect key="frame" x="276" y="193" width="48" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="Ae1-BO-jsC"/>
+                                    <constraint firstAttribute="height" constant="30" id="zNX-hc-lZG"/>
+                                </constraints>
                                 <state key="normal" title="Search"/>
                                 <connections>
                                     <action selector="searchFriends:" destination="5Fu-zj-twR" eventType="touchUpInside" id="fuX-h5-okf"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ykL-mR-oMQ">
-                                <rect key="frame" x="20" y="296" width="560" height="304"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ykL-mR-oMQ">
+                                <rect key="frame" x="20" y="280" width="560" height="300"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ResultCell" id="LrT-ht-VRR">
-                                        <rect key="frame" x="0.0" y="28" width="560" height="44"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LrT-ht-VRR" id="MKo-ch-rJs">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="43.5"/>
@@ -314,9 +319,23 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="ykL-mR-oMQ" firstAttribute="trailing" secondItem="Fwn-sR-cMd" secondAttribute="trailingMargin" id="7en-l8-Olm"/>
+                            <constraint firstItem="LZ2-ok-UKl" firstAttribute="top" secondItem="t1L-CV-Iba" secondAttribute="bottom" constant="95" id="A9G-Sy-8VI"/>
+                            <constraint firstItem="bbE-Ll-YOZ" firstAttribute="leading" secondItem="LZ2-ok-UKl" secondAttribute="trailing" constant="28" id="DBg-H9-iw6"/>
+                            <constraint firstItem="irQ-i8-boF" firstAttribute="top" secondItem="bbE-Ll-YOZ" secondAttribute="bottom" constant="8" id="Nob-h7-wyy"/>
+                            <constraint firstItem="ykL-mR-oMQ" firstAttribute="height" secondItem="Fwn-sR-cMd" secondAttribute="height" multiplier="0.5" id="Pad-vs-Fzk"/>
+                            <constraint firstItem="ykL-mR-oMQ" firstAttribute="leading" secondItem="Fwn-sR-cMd" secondAttribute="leadingMargin" id="Qg7-V2-6i6"/>
+                            <constraint firstItem="bbE-Ll-YOZ" firstAttribute="top" secondItem="t1L-CV-Iba" secondAttribute="bottom" constant="91" id="WM5-ue-xuD"/>
+                            <constraint firstItem="irQ-i8-boF" firstAttribute="centerX" secondItem="ykL-mR-oMQ" secondAttribute="centerX" id="WkU-SW-zyu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bbE-Ll-YOZ" secondAttribute="trailing" id="g0I-HT-q58"/>
+                            <constraint firstItem="xlE-gk-WIi" firstAttribute="top" secondItem="ykL-mR-oMQ" secondAttribute="bottom" constant="20" id="sQW-2p-de4"/>
+                            <constraint firstItem="LZ2-ok-UKl" firstAttribute="leading" secondItem="Fwn-sR-cMd" secondAttribute="leadingMargin" id="wb9-ls-ise"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="buttonSearchFriend" destination="irQ-i8-boF" id="LzU-8P-G66"/>
                         <outlet property="searchTextField" destination="bbE-Ll-YOZ" id="5dE-Wo-Ip0"/>
                         <outlet property="tableView" destination="ykL-mR-oMQ" id="4GF-NI-Fkw"/>
                     </connections>
